# FeMail

./: .env  .gitignore  Dockerfile.blacklistServer  Dockerfile.client  Dockerfile.frontend  Dockerfile.web  README.md  docker-compose.yml  package-lock.json  package.json
data/: urls.txt
res/layout/: topbar_selection.xml
src/: Debug_log.h
src/android-app/: settings.gradle.kts
src/android-app/app/: build.gradle.kts
src/android-app/gradle/: libs.versions.toml
src/blacklist/: App.cpp  App.h  AppSettings.cpp  AppSettings.h  Client.py  Delete.cpp  Delete.h  FileHandling.cpp  FileHandling.h  Gui.cpp  Gui.h  ICommand.h  Server.cpp  UrlHandler.cpp  UrlHandler.h  index_handler.cpp  index_handler.h  input_handler.cpp  input_handler.h
src/femail-web/: package-lock.json  package.json
src/femail-web/public/: index.html
src/femail-web/src/: App.js  index.css
src/femail-web/src/hooks/: useLabels.js  (+3 more)
src/mongodb/mongo-init/: init.js
src/nodejs-server/: .env  app.js  package-lock.json  package.json
src/nodejs-server/controllers/: blacklistController.js  labelController.js  mailController.js  searchController.js  tokensController.js  usersController.js
src/nodejs-server/middleware/: auth.js
src/nodejs-server/models/: blacklistModel.js  labelModel.js  mailModel.js  usersModel.js
src/nodejs-server/routes/: blacklist.js  labels.js  mails.js  search.js  tokens.js  users.js
src/tests/: CMakeLists.txt  Dockerfile  test_file_handler.cpp  test_indexes.cpp  test_input_handler.cpp  test_server.cpp  test_url.cpp
wiki/: android-usage.md  setup&deploy.md  web-usage.md
(+158 files in other folders)
